[project]
name = "ima-mcp"
version = "0.1.0"
description = "IMA知识库 MCP Server - 本地运行供CLI工具调用"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
